tests/errors/unterminated_if_01.f90
#if a
   #ifdef b
   #endif

program unterminated_if_01
   implicit none
   print *, "Hello world"
end program unterminated_if_01
